[package]
name = "wallet-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.1"
jsonrpsee-core = "0.16.2"
jsonrpsee-ws-client = "0.16.2"
sqlite = "0.30.3"
hex = "0.4.3"
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4"
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-scale-codec = { version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
parity-util-mem = { version = '0.12.0', optional = true }

sp-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true}
sp-debug-derive = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true, features = ["force-debug"] }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true}
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true, optional= true}
sp-application-crypto = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true}
sp-keyring = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true, optional= true}
sp-io = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true, features = ["with-tracing"] }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true}
sp-session = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true}
sp-std = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true}
sp-version = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true}
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.35", default_features = true}
dotenv = "0.15.0"

[features]
default = ["std"]
std = [
	"sp-keystore",
	"sp-keyring",
]